@@ -2,6 +2,7 @@ v0.6.1:
   date: 2015-02-10
   changes:
     - updated grunt-contrib-jshint version
+    - added a new config merge option and used it for the karma task only yet
 v0.6.0:
   date: 2015-02-10
   changes:
